[gd_scene load_steps=6 format=3 uid="uid://c23k7ndwkkh08"]

[ext_resource type="Texture2D" uid="uid://xvjcmagfi6d2" path="res://Assets/Images/track-craft-professional-1766859469981.png" id="1_ab0hp"]
[ext_resource type="Script" uid="uid://b6a44wx6bdkr2" path="res://Scenes/UI/TrackSelector/TrackSelector.gd" id="1_ndwtu"]
[ext_resource type="LabelSettings" uid="uid://cmwt0tu64obut" path="res://Resources/UiLabel32.tres" id="2_420lf"]
[ext_resource type="LabelSettings" uid="uid://b6p6eexbfj0b4" path="res://Resources/UiLabel22.tres" id="3_ndwtu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fehh3"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="TrackSelector" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fehh3")
script = ExtResource("1_ndwtu")

[node name="HighLight" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.07450981, 0.12941177, 0.21176471, 1)

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="TextureRect" type="TextureRect" parent="MC"]
layout_mode = 2
texture = ExtResource("1_ab0hp")
expand_mode = 1

[node name="TrackLabel" type="Label" parent="MC"]
layout_mode = 2
text = "ddgdfgdfgdfgfg"
label_settings = ExtResource("2_420lf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLapLabel" type="Label" parent="MC"]
layout_mode = 2
size_flags_vertical = 8
text = "Best 00:00	"
label_settings = ExtResource("3_ndwtu")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
